[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/LevelSelectRoot.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ContinueButton.gd" type="Script" id=2]
[ext_resource path="res://Fonts/BrokenFontTitle.tres" type="FontFile" id=3]
[ext_resource path="res://Fonts/BrokenFont.tres" type="FontFile" id=4]
[ext_resource path="res://Sprites/UI/Kenney1/dotWhite.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Etc/icon.png" type="Texture2D" id=6]
[ext_resource path="res://Sprites/UI/Kenney1/barHorizontal_shadow_mid.png" type="Texture2D" id=7]
[ext_resource path="res://Sprites/UI/Kenney1/dotGreen.png" type="Texture2D" id=8]
[ext_resource path="res://Sprites/UI/Kenney1/dotYellow.png" type="Texture2D" id=9]
[ext_resource path="res://Sprites/UI/Kenney1/dotRed.png" type="Texture2D" id=10]
[ext_resource path="res://Sprites/Maps/BUGSAntMapLevelSelect.png" type="Texture2D" id=11]
[ext_resource path="res://Shaders/CRTShader.gdshader" type="Shader" id=12]
[ext_resource path="res://Themes/Menus.tres" type="Theme" id=13]
[ext_resource path="res://Scenes/Menus/PauseRoot.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/Maps/UI/LevelSelect.png" type="Texture2D" id=16]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 12 )
shader_param/crt_curve = 0.02
shader_param/crt_scan_line_color = 0.347
shader_param/aperture_grille_rate = 0.4
shader_param/rf_switch_esque_blur = 1.0
shader_param/white_noise_rate = 0.2

[node name="LevelSelectRoot" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="MenuParent" type="Control" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource( 13 )

[node name="BGImage" type="TextureRect" parent="MenuParent"]
offset_right = 40.0
offset_bottom = 40.0

[node name="FullBG" type="ColorRect" parent="MenuParent"]
offset_left = -428.0
offset_top = -202.0
offset_right = 1572.0
offset_bottom = 998.0
custom_minimum_size = Vector2( 1024, 600 )
color = Color( 0.239216, 0.172549, 0.207843, 1 )

[node name="BG" type="ColorRect" parent="MenuParent"]
offset_right = 1024.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 1024, 600 )
color = Color( 0, 0, 0, 0.12549 )

[node name="BG3" type="ColorRect" parent="MenuParent"]
offset_left = 59.0
offset_top = 27.0
offset_right = 985.0
offset_bottom = 538.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 0.0784314 )

[node name="BG4" type="TextureRect" parent="MenuParent"]
visible = false
offset_left = 47.0
offset_top = 109.0
offset_right = 962.0
offset_bottom = 540.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="MenuParent"]
offset_right = 1024.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 1024, 600 )
texture = ExtResource( 16 )
stretch_mode = 1

[node name="TargetTextContainer" type="VBoxContainer" parent="MenuParent"]
offset_left = 278.0
offset_top = 35.0
offset_right = 746.0
offset_bottom = 131.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MenuParent/TargetTextContainer"]
offset_right = 468.0
offset_bottom = 32.0

[node name="Logo" type="TextureRect" parent="MenuParent/TargetTextContainer/HBoxContainer"]
visible = false
offset_right = 64.0
offset_bottom = 64.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3
texture = ExtResource( 6 )

[node name="Text" type="Label" parent="MenuParent/TargetTextContainer/HBoxContainer"]
offset_right = 468.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 100, 30 )
theme_override_fonts/font = ExtResource( 3 )
text = "Choose your target"
align = 1
valign = 1

[node name="Logo2" type="TextureRect" parent="MenuParent/TargetTextContainer"]
offset_top = 36.0
offset_right = 468.0
offset_bottom = 52.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3

[node name="Logo3" type="TextureRect" parent="MenuParent/TargetTextContainer"]
offset_top = 56.0
offset_right = 468.0
offset_bottom = 72.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3

[node name="Logo4" type="TextureRect" parent="MenuParent/TargetTextContainer"]
offset_top = 76.0
offset_right = 468.0
offset_bottom = 92.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3

[node name="Control" type="Control" parent="MenuParent/TargetTextContainer"]
offset_top = 96.0
offset_right = 468.0
offset_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuParent"]
offset_left = 115.0
offset_top = 123.0
offset_right = 948.0
offset_bottom = 523.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="BG2" type="ColorRect" parent="MenuParent/HBoxContainer"]
offset_right = 150.0
offset_bottom = 400.0
custom_minimum_size = Vector2( 150, 200 )
color = Color( 0, 0, 0, 0 )

[node name="MenuOptions" type="VBoxContainer" parent="MenuParent/HBoxContainer/BG2"]
offset_left = 15.0
offset_right = 140.0
offset_bottom = 266.0
custom_minimum_size = Vector2( 50, 150 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Label4" type="Label" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_right = 125.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 0, 20 )

[node name="Label6" type="Label" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 24.0
offset_right = 125.0
offset_bottom = 44.0
custom_minimum_size = Vector2( 0, 20 )

[node name="Label5" type="Label" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 48.0
offset_right = 125.0
offset_bottom = 68.0
custom_minimum_size = Vector2( 0, 20 )

[node name="ContinueButton" type="Button" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 72.0
offset_right = 125.0
offset_bottom = 92.0
custom_minimum_size = Vector2( 50, 20 )
text = "Ants"
icon = ExtResource( 10 )
expand_icon = true
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="MenuParent/HBoxContainer/BG2/MenuOptions/ContinueButton"]
visible = false
anchor_right = 1.008
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
theme = ExtResource( 13 )
bbcode_enabled = true
text = "[center]	[s] Ants [/s][/center]"
text = "	 Ants "
deselect_on_focus_loss_enabled = false

[node name="Label" type="Label" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 96.0
offset_right = 125.0
offset_bottom = 126.0
custom_minimum_size = Vector2( 0, 30 )

[node name="NewGameButton" type="Button" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 130.0
offset_right = 125.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 50, 20 )
text = "Beetles"
icon = ExtResource( 8 )
expand_icon = true

[node name="RichTextLabel2" type="RichTextLabel" parent="MenuParent/HBoxContainer/BG2/MenuOptions/NewGameButton"]
visible = false
anchor_right = 1.008
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0
offset_bottom = 4.0
theme = ExtResource( 13 )
bbcode_enabled = true
text = "[center]	[s] Beetles [/s][/center]"
text = "	 Beetles "
deselect_on_focus_loss_enabled = false

[node name="Label2" type="Label" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 154.0
offset_right = 125.0
offset_bottom = 184.0
custom_minimum_size = Vector2( 0, 30 )

[node name="OptionsButton" type="Button" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 188.0
offset_right = 125.0
offset_bottom = 208.0
custom_minimum_size = Vector2( 50, 20 )
text = "Bees"
icon = ExtResource( 9 )
expand_icon = true

[node name="RichTextLabel3" type="RichTextLabel" parent="MenuParent/HBoxContainer/BG2/MenuOptions/OptionsButton"]
visible = false
anchor_right = 1.008
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 5.0
offset_right = 1.0
offset_bottom = 5.0
theme = ExtResource( 13 )
bbcode_enabled = true
text = "[center]	[s] Bees [/s][/center]"
text = "	 Bees "
deselect_on_focus_loss_enabled = false

[node name="Label3" type="Label" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 212.0
offset_right = 125.0
offset_bottom = 242.0
custom_minimum_size = Vector2( 0, 30 )

[node name="QuitButton" type="Button" parent="MenuParent/HBoxContainer/BG2/MenuOptions"]
offset_top = 246.0
offset_right = 125.0
offset_bottom = 266.0
custom_minimum_size = Vector2( 50, 20 )
text = "Spiders"
icon = ExtResource( 5 )
expand_icon = true

[node name="RichTextLabel4" type="RichTextLabel" parent="MenuParent/HBoxContainer/BG2/MenuOptions/QuitButton"]
visible = false
anchor_right = 1.008
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
theme = ExtResource( 13 )
bbcode_enabled = true
text = "[center]	[s] Spiders [/s][/center]"
text = "	 Spiders "
deselect_on_focus_loss_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MenuParent/HBoxContainer/BG2"]
offset_left = 400.0
offset_right = 800.0
offset_bottom = 250.0
custom_minimum_size = Vector2( 250, 250 )

[node name="BG3" type="ColorRect" parent="MenuParent/HBoxContainer/BG2/VBoxContainer"]
offset_right = 400.0
offset_bottom = 200.0
custom_minimum_size = Vector2( 400, 200 )
color = Color( 0.00392157, 0.00392157, 0.00392157, 0.207843 )

[node name="MapBG" type="TextureRect" parent="MenuParent/HBoxContainer/BG2/VBoxContainer/BG3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 400, 200 )
texture = ExtResource( 11 )

[node name="MapBG2" type="ColorRect" parent="MenuParent/HBoxContainer/BG2/VBoxContainer/BG3"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 400, 200 )
color = Color( 1, 1, 1, 0.588235 )

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="MenuParent/HBoxContainer/BG2/VBoxContainer/BG3"]
offset_right = 398.0
offset_bottom = 199.0

[node name="Logo5" type="TextureRect" parent="MenuParent/HBoxContainer/BG2/VBoxContainer"]
offset_top = 204.0
offset_right = 400.0
offset_bottom = 220.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3

[node name="Logo6" type="TextureRect" parent="MenuParent/HBoxContainer/BG2/VBoxContainer"]
offset_top = 224.0
offset_right = 400.0
offset_bottom = 240.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3

[node name="Logo7" type="TextureRect" parent="MenuParent/HBoxContainer/BG2/VBoxContainer"]
offset_top = 244.0
offset_right = 400.0
offset_bottom = 260.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3

[node name="Logo8" type="TextureRect" parent="MenuParent/HBoxContainer/BG2/VBoxContainer"]
offset_top = 264.0
offset_right = 400.0
offset_bottom = 280.0
custom_minimum_size = Vector2( 16, 16 )
size_flags_vertical = 3

[node name="Label" type="Label" parent="MenuParent/HBoxContainer/BG2/VBoxContainer"]
offset_top = 284.0
offset_right = 400.0
offset_bottom = 365.0
theme_override_fonts/font = ExtResource( 4 )
text = "Defeat the ants and destroy all of their anthills so they can't increase their numbers"
align = 1
valign = 1
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MenuParent"]

[node name="PauseRoot" parent="." instance=ExtResource( 15 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="focus_entered" from="MenuParent/HBoxContainer/BG2/MenuOptions/ContinueButton" to="." method="_on_ContinueButton_focus_entered"]
[connection signal="pressed" from="MenuParent/HBoxContainer/BG2/MenuOptions/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="focus_entered" from="MenuParent/HBoxContainer/BG2/MenuOptions/NewGameButton" to="." method="_on_NewGameButton_focus_entered"]
[connection signal="pressed" from="MenuParent/HBoxContainer/BG2/MenuOptions/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="focus_entered" from="MenuParent/HBoxContainer/BG2/MenuOptions/OptionsButton" to="." method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="MenuParent/HBoxContainer/BG2/MenuOptions/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="MenuParent/HBoxContainer/BG2/MenuOptions/QuitButton" to="." method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="MenuParent/HBoxContainer/BG2/MenuOptions/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
